# boostcamp_project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  server_setting.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: README.md  main.py
app/api/: album_router.py  inference_router.py  real_time_router.py  upload_router.py  user_router.py
app/database/: crud.py  database.py  models.py  schemas.py
app/inference/: anomaly_detector.py  anomaly_detector_lstmae.py  rt_anomaly_detector.py  rt_anomaly_detector_lstmae.py
app/templates/: album_detail.html  album_list.html  base.html  frame.html  login.html  main.html  real_time.html  signup.html  stream.html  upload.html  video.html
app/templates/src/: album_detail.js  album_list.js
app/utils/: config.py  security.py  utils.py
datapreprocess/: feature_extraction.py  feature_extraction_onebyone.py  feature_extraction_videoMAEv2.py  run.sh
datapreprocess/models/: __init__.py  modeling_finetune.py
model/lstmae/: calc_abnormal_thr.py  calc_metric.py  calc_normal_thr.py  dataset.py  lstm_ae.py  lstm_ae_old.py  train.py
model/train/: anomaly_detector_LSTM.py  classifier.py  loss.py  model_convert.py  shop_dataset.py  train.sh  train_BNWVAD.py  train_LSTM.py  train_MIL.py  train_UCFC.py
model/vmae/: __init__.py  classifier.py  modeling_pretrain.py
